test_suite/tests/ui/integer/validate/wrong_value_type.stderr
error: Expected i32, got `0.0`
 --> tests/ui/integer/validate/wrong_value_type.rs:5:29
  |
5 | #[nutype(validate(greater = 0.0))]
  |                             ^^^
